# salez.online

./: CNAME  migrations.sql  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted-Alright-All-in-Founder-mode-No-MVP-cope-I-ll-give-you-t_1769792991806.txt  Pasted-Build-a-production-ready-SaaS-marketing-onboarding-webs_1769792462881.txt
client/: requirements.md
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Footer.tsx  Navbar.tsx  PhoneSimulator.tsx
client/src/hooks/: use-auth.ts  use-automation.ts  use-conversations.ts  use-leads.ts  use-reminders.ts
client/src/lib/: api.ts
client/src/pages/: Demo.tsx  Landing.tsx  Pricing.tsx  leads.tsx  not-found.tsx
client/src/pages/auth/: Login.tsx  Signup.tsx
client/src/services/: auth.ts  automation.ts  conversations.ts  leads.ts  templates.ts
reachly-server/: .env  Cargo.toml
reachly-server/src/: app.rs  db.rs  main.rs  static_files.rs
reachly-server/src/db/: auth.rs  conversations.rs  leads.rs  mod.rs  pool.rs  reminders.rs  rules.rs  templates.rs  webhook.rs
reachly-server/src/handlers/: auth.rs  conversations.rs  leads.rs  messages.rs  mod.rs  reminders.rs  rules.rs  templates.rs  webhook.rs
reachly-server/src/models/: auth.rs  conversation.rs  leads.rs  message.rs  mod.rs  reminders.rs  rules.rs  templates.rs
reachly-server/src/routes/: auth.rs  conversations.rs  leads.rs  mod.rs  reminders.rs  rules.rs  templates.rs  webhook.rs
reachly-server/src/utils/: cookies.rs
server/: routes.ts  storage.ts
shared/: routes.ts  schema.ts
(+1 files in other folders)
